final fixes for final task