@@ -3,6 +3,9 @@ package by.gsu.bal.finaltask;
 import java.sql.Connection;
 import java.sql.SQLException;
 import java.sql.Statement;
+import java.text.SimpleDateFormat;
+import java.util.Locale;
+import java.util.TimeZone;
 
 public class DBSetter {
 
@@ -14,10 +17,13 @@ public class DBSetter {
 
   public int insertPayRecord(PayRecord record) throws SQLException {
     try(Statement statement = conn.createStatement()) {
+      SimpleDateFormat sdf;
+      sdf = new SimpleDateFormat("yyyy-MM-dd");
+      String date = sdf.format(record.getPayDate());
       return statement.executeUpdate("""
           INSERT INTO records (service_id, pay_date, meter_value)
-          VALUES (%d, '%s', %f)
-          """.formatted(record.getServiceId(), record.getPayDate().toString(), record.getValue()));
+          VALUES (%d, '%s', %s)
+          """.formatted(record.getServiceId(), date, String.format(Locale.US, "%f", record.getValue())));
     }
   }
 
